# aiotailwind

./: README.md  demo.py  pyproject.toml
.github/workflows/: python-publish.yml
aiotailwind/: __init__.py  auth.py  tailwind.py
